various fixes/improvements to the Handheld skin - fix issue with gaps in gallery view - remove excessive white space in pageheader (PocketPC) - optimize pageheader for browse modes with gallery view and sort options - add small icons for gallery/list view toggle
Bug: 3840
git-svn-id: file:///home/awy/mirror/slim/trunk/server@8988 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Handheld/slimserver.css
+++ b/HTML/Handheld/slimserver.css
@@ -28,6 +28,8 @@ table, td, tr, form, h4 {
 
 .floater {
 	float: left;
+	margin-top: 10px;
+	margin-right: 10px;
 }
 
 ul {
@@ -113,9 +115,4 @@ small {
 .viewSelect
 {
 	white-space: nowrap;
-	float: right;
-}
-
-.viewSelect img {
-	vertical-align: middle;
 }
